search component update

--- a/src/app/components/map/search/search.component.html
+++ b/src/app/components/map/search/search.component.html
@@ -1,4 +1,13 @@
 <p>search works!</p>
+<button (click)="relieve()">Relieve</button>
+<button (click)="carreteras()">Calles</button>
+<button (click)="senderismo()">Senderismo</button>
+<button (click)="bici()">Bici</button>
+
+<button (click)="quitarMarcador()">Quitar Marcador</button>
+<button (click)="calculaRuta()">Calcular Ruta</button>
+<button (click)="borrarRutas()">Borrar Ruta</button>
+
 <div id="map">
 
 </div>
