--- a/src/app/components/pages/home/home.component.scss
+++ b/src/app/components/pages/home/home.component.scss
@@ -3,7 +3,8 @@
     height: 100vh;
     display: flex;
     justify-content: center;
-    background-image: url('../../../../assets/images/grey_hexagons_on_black_background.jpg');
+    //background-image: url('../../../../assets/images/grey_hexagons_on_black_background.jpg');
+    background-image: radial-gradient(circle at center center, rgba(33, 33, 33, 0), rgb(0, 0, 0)), repeating-linear-gradient(135deg, rgb(0, 0, 0) 0px, rgb(0, 0, 0) 1px, transparent 1px, transparent 4px), repeating-linear-gradient(45deg, rgb(56, 56, 56) 0px, rgb(56, 56, 56) 5px, transparent 5px, transparent 6px), linear-gradient(90deg, rgb(0, 0, 0), rgb(0, 0, 0));
     background-repeat: no-repeat;
     background-size: cover;
 }
