--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,8 +4,8 @@
     box-sizing: border-box;
 }
 
-.wrapper {
-    width: 80%;
+.footer {
+    width: calc(100%);
     height: 50px;
     display: flex;
     justify-content: center;
