--- a/src/app/components/map/search/search.component.scss
+++ b/src/app/components/map/search/search.component.scss
@@ -1,14 +1,29 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-#map {
+.centerMap {
     width: 100%;
-    height: 60%;
+    display: flex;
+    justify-content: center;
+}
+
+#map {
+    width: 80%;
+    height: 60vh;
     border-radius: 5px;
     overflow: hidden;
+}
+
+i {
+    color: white;
+    cursor: pointer;
+    margin: 0px 5px;
+    display: none;
 }
 
 button {
@@ -28,8 +43,11 @@ button:hover {
 .botones {
     height: auto;
     display: flex;
+    align-items: center;
     //flex-wrap: wrap;
-    overflow: scroll;
+    overflow-x: scroll;
+    scrollbar-width: none;
+    scroll-behavior: smooth;
     // background-color: aquamarine;
 }
 
@@ -39,4 +57,10 @@ button:hover {
     justify-content: center;
     align-items: center;
     margin-bottom: 2vh;
+}
+
+@media(max-width:480px) {
+    i {
+        display: block;
+    }
 }
