--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -13,6 +13,6 @@
     box-shadow: white 0px 1px 10px;
     color: white;
     border: 1px solid white;
-    position: fixed;
+    position: absolute;
     bottom: 0;
 }
