--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -2,6 +2,6 @@
 
     <app-header></app-header>
     <app-search></app-search>
-    <app-footer></app-footer>
+    <app-footer class="foot"></app-footer>
 
 </div>
